==> espruino/Espruino/libs/banglejs/banglejs3_py32/libs/hal/src/py32f07x_hal_comp.c <==
#include "py32f07x_hal.h"
#define COMP_DELAY_STARTUP_US          (80UL) /*!< Delay for COMP startup time */
#define COMP_DELAY_VOLTAGE_SCALER_STAB_US (200UL)  /*!< Delay for COMP voltage scaler stabilization time */
#define COMP_OUTPUT_LEVEL_BITOFFSET_POS   (COMP_CSR_COMP_OUT_Pos)

HAL_StatusTypeDef HAL_COMP_Init(COMP_HandleTypeDef *hcomp)
{
  uint32_t tmp_csr;
  uint32_t exti_line;
  __IO uint32_t wait_loop_index = 0UL;
  HAL_StatusTypeDef status = HAL_OK;

  /* Check the COMP handle allocation and lock status */
  if(hcomp == NULL)
  {
    status = HAL_ERROR;
  }
  else
  {
    /* Check the parameters */
    assert_param(IS_COMP_ALL_INSTANCE(hcomp->Instance));
    assert_param(IS_COMP_INPUT_PLUS(hcomp->Instance, hcomp->Init.InputPlus));
    assert_param(IS_COMP_INPUT_MINUS(hcomp->Instance, hcomp->Init.InputMinus));
    assert_param(IS_COMP_OUTPUTPOL(hcomp->Init.OutputPol));
    assert_param(IS_COMP_POWERMODE(hcomp->Init.Mode));
    assert_param(IS_COMP_HYSTERESIS(hcomp->Init.Hysteresis));
    assert_param(IS_COMP_TRIGGERMODE(hcomp->Init.TriggerMode));
    assert_param(IS_COMP_WINDOWMODE(hcomp->Init.WindowMode));
    assert_param(IS_COMP_VREFSRC(hcomp->Init.VrefSrc));
    assert_param(IS_COMP_VREFDIV(hcomp->Init.VrefDiv));

    if(hcomp->State == HAL_COMP_STATE_RESET)
    {
      /* Allocate lock resource and initialize it */
      hcomp->Lock = HAL_UNLOCKED;

      /* Set COMP error code to none */
      COMP_CLEAR_ERRORCODE(hcomp);


#if (USE_HAL_COMP_REGISTER_CALLBACKS == 1)
      /* Init the COMP Callback settings */
      hcomp->TriggerCallback = HAL_COMP_TriggerCallback; /* Legacy weak callback */

      if (hcomp->MspInitCallback == NULL)
      {
        hcomp->MspInitCallback = HAL_COMP_MspInit; /* Legacy weak MspInit  */
      }

      /* Init the low level hardware */
      /* Note: Internal control clock of the comparators must                 */
      /*       be enabled in "HAL_COMP_MspInit()"                             */
      /*       using "__HAL_RCC_SYSCFG_CLK_ENABLE()".                         */
      hcomp->MspInitCallback(hcomp);
#else
      /* Init the low level hardware */
      /* Note: Internal control clock of the comparators must                 */
      /*       be enabled in "HAL_COMP_MspInit()"                             */
      /*       using "__HAL_RCC_SYSCFG_CLK_ENABLE()".                         */
      HAL_COMP_MspInit(hcomp);
#endif /* USE_HAL_COMP_REGISTER_CALLBACKS */
    }

  /* Set COMP parameters */
    tmp_csr = (  hcomp->Init.InputMinus
                 | hcomp->Init.InputPlus
                 | hcomp->Init.OutputPol
                 | hcomp->Init.Mode
              );
    /* Set parameters in COMP register */
    /* Note: Update all bits except read-only, lock and enable bits */
    MODIFY_REG(hcomp->Instance->CSR,
               COMP_CSR_COMP_OUT  | COMP_CSR_PWRMODE |
               COMP_CSR_POLARITY | COMP_CSR_WINMODE | COMP_CSR_INPSEL |
               COMP_CSR_INNSEL | COMP_CSR_EN,
               tmp_csr
              );
    /* Set digital filter */
    if (hcomp->Init.DigitalFilter == 0)
    {
      /* Disable digital filter */
      CLEAR_BIT(hcomp->Instance->FR, COMP_FR_FLTEN);
    }
    else
    {
      WRITE_REG(hcomp->Instance->FR, (COMP_FR_FLTEN | ((hcomp->Init.DigitalFilter) << COMP_FR_FLTCNT_Pos)));
    }
    
    if((hcomp->Instance == COMP1 || hcomp->Instance == COMP2) && hcomp->Init.InputMinus == COMP_INPUT_MINUS_IO11)
    {
      MODIFY_REG(COMP12_COMMON->CSR_ODD, COMP_CSR_VCSEL, hcomp->Init.VrefSrc);
      MODIFY_REG(COMP12_COMMON->CSR_ODD, COMP_CSR_VCDIV_EN | COMP_CSR_VCDIV, hcomp->Init.VrefDiv);
    }
    
    if(hcomp->Init.Hysteresis == COMP_HYSTERESIS_ENABLE)
    {      
      if(hcomp->Instance == COMP1)
      {
        SET_BIT(hcomp->Instance->CSR,COMP1_CSR_HYST);
      }
      else if (hcomp->Instance == COMP2)
      {
        SET_BIT(hcomp->Instance->CSR,COMP2_CSR_HYST);
      }
      else if (hcomp->Instance == COMP3)
      {
        SET_BIT(hcomp->Instance->CSR,COMP3_CSR_HYST);
      }
      else
      {
        
      }
    }
    else
    {
      if(hcomp->Instance == COMP1)
      {
        CLEAR_BIT(hcomp->Instance->CSR,COMP1_CSR_HYST);
      }
      else if (hcomp->Instance == COMP2)
      {
        CLEAR_BIT(hcomp->Instance->CSR,COMP2_CSR_HYST);
      }
      else if (hcomp->Instance == COMP3)
      {
        CLEAR_BIT(hcomp->Instance->CSR,COMP3_CSR_HYST);
      }
      else
      {
        
      }
    }

    if(hcomp->Instance != COMP3)
    {
      /* Set window mode */
      /* Note: Window mode bit is located into 1 out of the 2 pairs of COMP     */
      /*       instances. Therefore, this function can update another COMP      */
      /*       instance that the one currently selected.                        */
      if(hcomp->Init.WindowMode == COMP_WINDOWMODE_COMP1_INPUT_PLUS_COMMON)
      {
        CLEAR_BIT(COMP12_COMMON->CSR_ODD, COMP_CSR_WINMODE);
        SET_BIT(COMP12_COMMON->CSR_EVEN, COMP_CSR_WINMODE);
      }
      else if(hcomp->Init.WindowMode == COMP_WINDOWMODE_COMP2_INPUT_PLUS_COMMON)
      {
        SET_BIT(COMP12_COMMON->CSR_ODD, COMP_CSR_WINMODE);
        CLEAR_BIT(COMP12_COMMON->CSR_EVEN, COMP_CSR_WINMODE);
      }
      else
      {
        CLEAR_BIT(COMP12_COMMON->CSR_ODD, COMP_CSR_WINMODE);
        CLEAR_BIT(COMP12_COMMON->CSR_EVEN, COMP_CSR_WINMODE);
      }
    }
    
    /* Get the EXTI line corresponding to the selected COMP instance */
    exti_line = COMP_GET_EXTI_LINE(hcomp->Instance);

    /* Manage EXTI settings */
    if((hcomp->Init.TriggerMode & (COMP_EXTI_IT | COMP_EXTI_EVENT)) != 0UL)
    {
      /* Configure EXTI rising edge */
      if((hcomp->Init.TriggerMode & COMP_EXTI_RISING) != 0UL)
      {
        LL_EXTI_EnableRisingTrig(exti_line);
      }
      else
      {
        LL_EXTI_DisableRisingTrig(exti_line);
      }

      /* Configure EXTI falling edge */
      if((hcomp->Init.TriggerMode & COMP_EXTI_FALLING) != 0UL)
      {
        LL_EXTI_EnableFallingTrig(exti_line);
      }
      else
      {
        LL_EXTI_DisableFallingTrig(exti_line);
      }

      /* Clear COMP EXTI pending bit (if any) */
      LL_EXTI_ClearFlag(exti_line);

      /* Configure EXTI event mode */
      if((hcomp->Init.TriggerMode & COMP_EXTI_EVENT) != 0UL)
      {
        LL_EXTI_EnableEvent(exti_line);
      }
      else
      {
        LL_EXTI_DisableEvent(exti_line);
      }

      /* Configure EXTI interrupt mode */
      if((hcomp->Init.TriggerMode & COMP_EXTI_IT) != 0UL)
      {
        LL_EXTI_EnableIT(exti_line);
      }
      else
      {
        LL_EXTI_DisableIT(exti_line);
      }
    }
    else
    {
      /* Disable EXTI event mode */
      LL_EXTI_DisableEvent(exti_line);

      /* Disable EXTI interrupt mode */
      LL_EXTI_DisableIT(exti_line);
    }
    
    /* Set HAL COMP handle state */
    /* Note: Transition from state reset to state ready,                      */
    /*       otherwise (coming from state ready or busy) no state update.     */
    if (hcomp->State == HAL_COMP_STATE_RESET)
    {
      hcomp->State = HAL_COMP_STATE_READY;
    }
  }

  return status;
}

void HAL_COMP_IRQHandler(COMP_HandleTypeDef *hcomp)
{
  /* Get the EXTI line corresponding to the selected COMP instance */
  uint32_t exti_line = COMP_GET_EXTI_LINE(hcomp->Instance);
  uint32_t comparator_window_mode_odd = READ_BIT(COMP12_COMMON->CSR_ODD, COMP_CSR_WINMODE);
  uint32_t comparator_window_mode_even = READ_BIT(COMP12_COMMON->CSR_EVEN, COMP_CSR_WINMODE);

  /* Check COMP EXTI flag */
  if(LL_EXTI_IsActiveFlag(exti_line) != 0UL)
  {
    /* Check whether comparator is in independent or window mode */
    if(   (comparator_window_mode_odd != 0UL)
          || (comparator_window_mode_even != 0UL))
    {
      /* Clear COMP EXTI line pending bit of the pair of comparators          */
      /* in window mode.                                                      */
      /* Note: Pair of comparators in window mode can both trig IRQ when      */
      /*       input voltage is changing from "out of window" area            */
      /*       (low or high ) to the other "out of window" area (high or low).*/
      /*       Both flags must be cleared to call comparator trigger          */
      /*       callback is called once.                                       */
      LL_EXTI_ClearFlag((COMP_EXTI_LINE_COMP1 | COMP_EXTI_LINE_COMP2));
    }
    else
    {
      /* Clear COMP EXTI line pending bit */
      LL_EXTI_ClearFlag(exti_line);
    }

    /* COMP trigger user callback */
#if (USE_HAL_COMP_REGISTER_CALLBACKS == 1)
    hcomp->TriggerCallback(hcomp);
#else
    HAL_COMP_TriggerCallback(hcomp);
#endif /* USE_HAL_COMP_REGISTER_CALLBACKS */
  }
  else
  {
    /* nothing to do */
  }
}
